--- a/styles/bio.css
+++ b/styles/bio.css
@@ -33,7 +33,7 @@
   color: #FFFFFF;
 }
 .primary-nav__logo {
-  padding: 1rem 0rem 0.5rem;
+  margin-top: 1rem;
 }
 .primary-nav__list {
   display: flex;
@@ -146,6 +146,7 @@
   }
   .primary-nav__logo {
     padding: 0;
+    margin: 0;
   }
   .primary-nav__logo-link {
     margin-right: 2.25rem;
