--- a/styles/bio.css
+++ b/styles/bio.css
@@ -126,7 +126,7 @@
   padding-top: 1rem;
 }
 .footer__logo {
-  padding-top: 3rem;
+  margin-top: 3rem;
 }
 .footer__text {
   font-size: 0.813rem;
@@ -208,6 +208,7 @@
     position: absolute;
     right: 2.25rem;
     top: 16%;
+    margin: 0;
   }
   .footer__text {
     font-size: 0.875rem;
@@ -593,6 +594,11 @@
   }
   .comment {
     padding: 0 2.25rem;
+  }
+  .comment__heading {
+    font-size: 2.25rem;
+    line-height: 2.75rem;
+    font-weight: 700;
   }
   .comment__container {
     padding: 0 3.5rem 2.25rem;
