--- a/styles/bio.scss
+++ b/styles/bio.scss
@@ -221,6 +221,10 @@
                 flex-direction: row;
                 justify-content: space-between;
             }
+            &-buttons-container{
+                display: flex;
+                justify-content: space-between;
+            }
         }
     }
     &__name{
