--- a/styles/bio.css
+++ b/styles/bio.css
@@ -495,6 +495,7 @@
 .comment__bottom-right-buttons-container {
   display: flex;
   justify-content: space-between;
+  margin-top: 0.5rem;
 }
 .comment__name {
   font-size: 0.875rem;
@@ -515,6 +516,28 @@
   line-height: 1.125rem;
   font-weight: 400;
   margin: 0;
+}
+.comment__like-container {
+  display: flex;
+  width: 4rem;
+  justify-content: flex-start;
+  align-items: flex-end;
+}
+.comment__like-button {
+  width: 1.5rem;
+  height: 1.5rem;
+  cursor: pointer;
+}
+.comment__like-txt {
+  font-size: 0.813rem;
+  line-height: 1.125rem;
+  font-weight: 400;
+  font-weight: bold;
+}
+.comment__delete-button {
+  width: 1.25rem;
+  height: 1.25rem;
+  cursor: pointer;
 }
 
 @media screen and (min-width: 768px) {
