--- a/styles/bio.scss
+++ b/styles/bio.scss
@@ -224,6 +224,7 @@
             &-buttons-container{
                 display: flex;
                 justify-content: space-between;
+                margin-top: 0.5rem;
             }
         }
     }
@@ -241,7 +242,28 @@
         @include style.body-copy(small);
         margin: 0;
     }
-
+    &__like{
+        &-container{
+        display: flex;
+        width: 4rem;
+        justify-content: flex-start;
+        align-items: flex-end;
+    }
+        &-button{
+            width: 1.5rem;
+            height: 1.5rem;
+            cursor: pointer;
+        }
+        &-txt{
+            @include style.body-copy(small);
+            font-weight: bold;
+        }
+    }
+    &__delete-button{
+        width: 1.25rem;
+        height: 1.25rem;
+        cursor: pointer;
+    }
 }
 
     @include mediaQuery.tablet{
